--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -77,7 +77,7 @@ qemu是云计算中虚拟化的最终执行者，通过openstack，libvirt等封
 
 ## 2.1. vcpu运行
 
-现在使用的x86架构的虚拟化技术利用了intel的VT-x技术。vt-x的基本思想是区分cpu的工作模式，root和非root模式。每一种模式又分为0-3四个特权级。在虚拟机中cpu运行在非root模式下，当执行敏感指令时，cpu会自动从非root模式切换到root模式，称为vm-exit。对应的，VMM也会发起从root模式到非root模式的切换，称为vm-entry。VT-x还引入了VMCS的概念，用户保存cpu在各种模式下的运行状态，方便cpu在多种模式下的切换。VMCS在系统中存储在一块最大不超过4kB大小的内存中，内容包括VMCS版本号，VMCS中止标识以及VMCS数据域。在数据域中包括如下各种信息：
+现在使用的x86架构的虚拟化技术利用了intel的VT\-x技术。vt\-x的基本思想是区分cpu的工作模式，root和非root模式。每一种模式又分为0-3四个特权级。在虚拟机中cpu运行在非root模式下，当执行敏感指令时，cpu会自动从非root模式切换到root模式，称为vm-exit。对应的，VMM也会发起从root模式到非root模式的切换，称为vm-entry。VT-x还引入了VMCS的概念，用户保存cpu在各种模式下的运行状态，方便cpu在多种模式下的切换。**VMCS**在系统中存储在一块最大**不超过4kB大小的内存**中，内容包括**VMCS版本号**，**VMCS中止标识**以及**VMCS数据域**。在数据域中包括如下各种信息：
 
 * 客户机状态域 在虚拟机内运行时，即非root模式下CPU的状态。vm-exit发生时，cpu当前的状态会存储到客户机状态域。vm-entry发生时，从客户机状态域恢复cpu状态。
 * 宿主机状态域 在VMM运行时，即root模式下CPU的状态。vm-exit发生时，cpu从这里恢复cpu运行状态。
