--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -77,14 +77,22 @@ qemu是云计算中虚拟化的最终执行者，通过openstack，libvirt等封
 
 ## 2.1. vcpu运行
 
-现在使用的x86架构的虚拟化技术利用了intel的VT\-x技术。vt\-x的基本思想是区分cpu的工作模式，root和非root模式。每一种模式又分为0-3四个特权级。在虚拟机中cpu运行在非root模式下，当执行敏感指令时，cpu会自动从非root模式切换到root模式，称为vm-exit。对应的，VMM也会发起从root模式到非root模式的切换，称为vm-entry。VT-x还引入了VMCS的概念，用户保存cpu在各种模式下的运行状态，方便cpu在多种模式下的切换。**VMCS**在系统中存储在一块最大**不超过4kB大小的内存**中，内容包括**VMCS版本号**，**VMCS中止标识**以及**VMCS数据域**。在数据域中包括如下各种信息：
+现在使用的x86架构的虚拟化技术利用了intel的VT\-x技术。vt\-x的基本思想是区分cpu的工作模式，root和非root模式。每一种模式又分为0-3四个特权级。在虚拟机中cpu运行在非root模式下，当执行敏感指令时，cpu会自动从非root模式切换到root模式，称为vm-exit。对应的，VMM也会发起从root模式到非root模式的切换，称为vm-entry。VT-x还引入了VMCS的概念，用户保存cpu在各种模式下的运行状态，方便cpu在多种模式下的切换。
 
-* 客户机状态域 在虚拟机内运行时，即非root模式下CPU的状态。vm-exit发生时，cpu当前的状态会存储到客户机状态域。vm-entry发生时，从客户机状态域恢复cpu状态。
-* 宿主机状态域 在VMM运行时，即root模式下CPU的状态。vm-exit发生时，cpu从这里恢复cpu运行状态。
-* vm-entry控制域 控制vm-entry的过程
-* vm-execution控制域 控制非根模式下的行为
-* vm-exit控制域 控制vm-exit的过程
-* vm-exit信息域 提供vm-exit的原因和其他信息，只读域。
+**VMCS**在系统中存储在一块最大**不超过4kB大小的内存**中，内容包括
+
+* **VMCS版本号**，
+* **VMCS中止标识**
+* 以及**VMCS数据域**。
+
+在数据域中包括如下各种信息：
+
+* **客户机状态域**: 在虚拟机内运行时，即非root模式下CPU的状态。vm-exit发生时，cpu当前的状态会存储到客户机状态域。vm-entry发生时，从客户机状态域恢复cpu状态。
+* **宿主机状态域**: 在VMM运行时，即root模式下CPU的状态。vm-exit发生时，cpu从这里恢复cpu运行状态。
+* **vm\-entry控制域**: 控制vm\-entry的过程
+* **vm\-execution控制域**: 控制非根模式下的行为
+* **vm\-exit控制域**: 控制vm\-exit的过程
+* **vm\-exit信息域**: 提供vm\-exit的原因和其他信息，只读域。
 
 ## 2.2. 内存访问
 
@@ -92,7 +100,7 @@ qemu是云计算中虚拟化的最终执行者，通过openstack，libvirt等封
 
 ## 2.3. 影子页表
 
-在hypervisor中维护一张内存影子页表，根据GVA-GPA-HVA-HPA的映射关系直接计算GVA-HPA的映射关系，并将对应的映射关系写入影子页表。这样可以解决虚拟机内存访问的问题，但是依赖软件实现的影子页表也带来了很多问题。像各种页表之间的同步问题，页表本身的内存开销等。
+在hypervisor中维护一张**内存影子页表**，根据GVA-GPA-HVA-HPA的映射关系直接计算**GVA-HPA**的映射关系，并将对应的映射关系写入影子页表。这样可以解决虚拟机内存访问的问题，但是依赖软件实现的影子页表也带来了很多问题。像各种页表之间的同步问题，页表本身的内存开销等。
 
 ## 2.4. EPT
 
