--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -104,7 +104,7 @@ qemu是云计算中虚拟化的最终执行者，通过openstack，libvirt等封
 
 ## 2.4. EPT
 
-EPT页表利用硬件实现了从GPA到HPA的映射，每个虚拟机只需要维护一个EPT页表即可。减少了开销，提高了性能。
+EPT页表利用硬件实现了从GPA到HPA的映射，**每个虚拟机**只需要**维护一个EPT页表**即可。减少了开销，提高了性能。
 
 # 3. 代码流程分析
 
@@ -142,9 +142,10 @@ void module_call_init(module_init_type type)
 }
 ```
 
-这个函数实现的功能就是执行ModuleTypeList类型的链表中每一个节点的init函数。可是我们现在是在一个二进制文件的入口main函数中，并没有初始化这样一个链表么~那么这个链表中的内容是怎么来的呢。通过搜索代码我们可以看到很多设备文件中最后都会调用一个type\_init函数：
+这个函数实现的功能就是执行ModuleTypeList类型的链表中每一个节点的init函数。可是我们现在是在一个二进制文件的入口main函数中，并没有初始化这样一个链表么~那么这个链表中的内容是怎么来的呢。通过搜索代码我们可以看到很多设备文件中最后都会调用一个**type\_init函数**：
 
 ```cpp
+
 type_init(virtio_register_types)
 
 #define type_init(function) module_init(function, MODULE_INIT_QOM)
@@ -156,6 +157,7 @@ static void __attribute__((constructor)) do_qemu_init_ ## function(void)    \
     (function, type);                                   \
 }
 
+// util/module.c
 void register_module_init(void (*fn)(void), module_init_type type)
 {
     ModuleEntry *e;
@@ -170,6 +172,7 @@ void register_module_init(void (*fn)(void), module_init_type type)
     QTAILQ_INSERT_TAIL(l, e, node);
 }
 
+// util/module.c
 static ModuleTypeList *find_type(module_init_type type)
 {
     ModuleTypeList *l;
