--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -145,11 +145,13 @@ void module_call_init(module_init_type type)
 这个函数实现的功能就是执行ModuleTypeList类型的链表中每一个节点的init函数。可是我们现在是在一个二进制文件的入口main函数中，并没有初始化这样一个链表么~那么这个链表中的内容是怎么来的呢。通过搜索代码我们可以看到很多设备文件中最后都会调用一个**type\_init函数**：
 
 ```cpp
-
+// include/qemu/module.h
 type_init(virtio_register_types)
 
+// include/qemu/module.h
 #define type_init(function) module_init(function, MODULE_INIT_QOM)
 
+// include/qemu/module.h
 /* This should not be used directly.  Use block_init etc. instead.  */
 #define module_init(function, type)                                         \
 static void __attribute__((constructor)) do_qemu_init_ ## function(void)    \
@@ -184,8 +186,10 @@ static ModuleTypeList *find_type(module_init_type type)
     return l;
 }
 
+// util/module.c
 static ModuleTypeList init_type_list[MODULE_INIT_MAX];
 
+// include/qemu/module.h
 typedef enum {
     MODULE_INIT_BLOCK,
     MODULE_INIT_MACHINE,
@@ -199,9 +203,9 @@ typedef enum {
 
 * qemu定义**各种设备类型**
 * 初始化一个**ModuleTypeList类型**的**链表数组**
-* 通过find\_type函数可以获取**指定设备类型**的列表。
-* register\_module\_init中把参数**指定的设备**加入到其所属**设备类型的链表**中
-* 把上面的函数封装到一个函数中，并且这个函数添加了gcc的attribute：\_\_attribute\_\_((constructor)),其含义是在**整个程序**的**main函数执行之前**该函数就会被执行。
+* 通过find\_type函数可以获取**指定设备类型**的**列表**。
+* **register\_module\_init**中把参数**指定的设备**加入到其所属**设备类型的链表**中
+* 把上面的函数**封装到一个函数**中，并且这个函数添加了gcc的attribute：\_\_**attribute**\_\_((constructor)),其含义是在**整个程序**的**main函数执行之前**该函数就会被执行。
 
 至此我们就可以看到，在**main函数**开始**执行之前**，**init\_type\_list链表**就已经**初始化完成**。因此上面的module\_call\_init(MODULE\_INIT\_QOM);就可以遍历**所有的QOM设备**并执行他们的init函数，以virtio\-blk函数为例，init的执行内容如下。就是注册一下当前的设备类型，设备总线，以及其它一些相关的初始化函数。
 
