--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -156,7 +156,7 @@ type_init(virtio_register_types)
 #define module_init(function, type)                                         \
 static void __attribute__((constructor)) do_qemu_init_ ## function(void)    \
 {                                                                           \
-    (function, type);                                   \
+    register_module_init(function, type);                                   \
 }
 
 // util/module.c
@@ -207,9 +207,10 @@ typedef enum {
 * **register\_module\_init**中把参数**指定的设备**加入到其所属**设备类型的链表**中
 * 把上面的函数**封装到一个函数**中，并且这个函数添加了gcc的attribute：\_\_**attribute**\_\_((constructor)),其含义是在**整个程序**的**main函数执行之前**该函数就会被执行。
 
-至此我们就可以看到，在**main函数**开始**执行之前**，**init\_type\_list链表**就已经**初始化完成**。因此上面的module\_call\_init(MODULE\_INIT\_QOM);就可以遍历**所有的QOM设备**并执行他们的init函数，以virtio\-blk函数为例，init的执行内容如下。就是注册一下当前的设备类型，设备总线，以及其它一些相关的初始化函数。
+至此我们就可以看到，在**main函数**开始**执行之前**，**init\_type\_list链表**就已经**初始化完成**。因此上面的module\_call\_init(MODULE\_INIT\_QOM);就可以遍历**所有的QOM设备**并执行他们的init函数, 以virtio\-blk函数为例，init的执行内容如下。就是注册一下当前的设备类型，设备总线，以及其它一些相关的初始化函数。
 
 ```cpp
+// hw/virtio/virtio.c
 static const TypeInfo virtio_device_info = {
     .name = TYPE_VIRTIO_BLK,
     .parent = TYPE_VIRTIO_DEVICE,
