--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -224,6 +224,7 @@ static void virtio_register_types(void)
     type_register_static(&virtio_device_info);
 }
 
+// 会直接调用, 直到register_module_init
 type_init(virtio_register_types)
 ```
 
