--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -230,6 +230,8 @@ type_init(virtio_register_types)
 
 QOM到底指的是什么设备呢？QOM即**qemu object model**，qemu设备模型，是一种**qemu设备模拟的规范**。目前基本上**所有qemu支持的设备**都**使用这种规范**。我们可以看到在初始化的链表数组中还有**其它类型的设备**，后面会涉及到。
 
+同理`MODULE_INIT_BLOCK`类型设备链表是通过`block_init()`调用的
+
 2. 初始化qemu记录**命令行参数的数据结构**，等待下面解析qemu command。这里为所有可能的qemu command参数准备了存储结构。
 
 ```cpp
