--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -318,13 +318,13 @@ machine_init(pc_machine_init);
 machine_class = find_default_machine();
 ```
 
-6. 初始化**block driver入口**。使用的仍然是module_init方式。这里的block driver即我们在使用**file disk**的时候指定的**各种driver类型**，如qcow2，raw等。
+6. 初始化**block driver入口**。使用的仍然是`module_init`方式。这里的block driver即我们在使用**file disk**的时候指定的**各种driver类型**，如qcow2，raw等。
 
 ```cpp
 bdrv_init_with_whitelist();
 ```
 
-7. 以上qemu已经执行了6个关键步骤，但都是一些基本的初始化操作，在物理节点上每一个虚拟机启动都会执行完全一样的操作。而区分不同虚拟机的qemu command参数到这里为止还没有解析。接下来会先遍历一遍qemu command中的参数，根据参数确定是否使用预先配置在/**etc/qemu/target-{arch}.conf**文件中的**配置参数**。
+7. 以上qemu已经执行了6个关键步骤，但都是一些**基本的初始化操作**，在**物理节点**上**每一个虚拟机**启动都会执行**完全一样的操作**。而区分**不同虚拟机**的**qemu command参数**到这里为止还没有解析。接下来会先遍历一遍qemu command中的参数，根据参数确定是否使用预先配置在/**etc/qemu/target-{arch}.conf**文件中的**配置参数**。
 
 ```cpp
     if (defconfig) {
@@ -338,7 +338,16 @@ bdrv_init_with_whitelist();
 
 8. 接下来真正解析qemu command中配置的各种参数 通过一个for循环，**解析结果**放入`vm_config_group`
 
-9. 初始化main\_loop中使用的时钟。在当前的架构下，qemu中需要维护三种时间：
+9. 初始化main\_loop
+
+```cpp
+if(qemu_init_main_loop(&main_loop_err)){
+    error_report_err(main_loop_err);
+    exit(1);
+}
+```
+
+初始化main\_loop中使用的时钟。在当前的架构下，qemu中需要维护三种时间：
 
 * `QEMU_CLOCK_REALTIME` RTC
 * `QEMU_CLOCK_VIRTUAL` 虚拟机运行时间
@@ -369,10 +378,11 @@ gpollfds = g_array_new(FALSE, FALSE, sizeof(GPollFD));
     }
 ```
 
-**cpudef\_init**初始化支持的cpu feature，可以通过如下命令查询当前qemu支持的cpu feature
+14. **cpudef\_init**初始化**支持的cpu feature**，可以通过如下命令查询当前qemu支持的cpu feature
 
 ```cpp
 # /usr/bin/qemu-system-x86_64 -cpu help
+    cpudef_init();
     if (cpu_model && is_help_option(cpu_model)) {
         list_cpus(stdout, &fprintf, cpu_model);
         exit(0);
@@ -385,7 +395,9 @@ gpollfds = g_array_new(FALSE, FALSE, sizeof(GPollFD));
 
 ```cpp
 smp_parse(qemu_opts_find(qemu_find_opts("smp-opts"), NULL));
+
 machine_class->max_cpus = machine_class->max_cpus ?: 1; /* Default to UP */#未配置cpu情况下 默认配置一个
+
 #校验参数合法性
 if (smp_cpus > machine_class->max_cpus) {
     fprintf(stderr, "Number of SMP cpus requested (%d), exceeds max cpus "
