--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -22,6 +22,8 @@
   - [初始化main\_loop](#初始化main_loop)
     - [初始化时钟](#初始化时钟)
     - [注册信号处理函数](#注册信号处理函数)
+    - [为fd申请内存](#为fd申请内存)
+  - [cpu_exec_init_all](#cpu_exec_init_all)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -382,7 +384,7 @@ if(qemu_init_main_loop(&main_loop_err)){
 初始化main\_loop中使用的时钟。
 
 ```cpp
-init_clocks()
+init_clocks();
 ```
 
 在当前的架构下，qemu中需要维护三种时间：
@@ -396,16 +398,20 @@ init_clocks()
 注册qemu进程**信号量处理函数**，**qemu**收到的**进程信号**会触发注册的`sigfd_handler`回调函数
 
 ```cpp
-
+qemu_signal_init();
 ```
 
-11. 为main\_loop监听的**fd**申请**管理内存**
+### 为fd申请内存
+
+为main\_loop监听的**fd**申请**管理内存**
 
 ```cpp
 gpollfds = g_array_new(FALSE, FALSE, sizeof(GPollFD));
 ```
 
-12. cpu\_exec\_init\_all 遗留 
+## cpu_exec_init_all 
+
+遗留 
 
 * `memory_map_init` qemu进程设备模拟占用的内存申请及初始化 
 * `io\_mem\_init` io rom内存空间申请及初始化
