--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -24,6 +24,11 @@
     - [注册信号处理函数](#注册信号处理函数)
     - [为fd申请内存](#为fd申请内存)
   - [cpu_exec_init_all](#cpu_exec_init_all)
+  - [设置硬件版本](#设置硬件版本)
+  - [初始化支持的cpu feature](#初始化支持的cpu-feature)
+  - [data_dir_idx](#data_dir_idx)
+  - [smp参数解析](#smp参数解析)
+  - [是否配置默认串口, 井口等](#是否配置默认串口-井口等)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -416,7 +421,7 @@ gpollfds = g_array_new(FALSE, FALSE, sizeof(GPollFD));
 * `memory_map_init` qemu进程设备模拟占用的内存申请及初始化 
 * `io\_mem\_init` io rom内存空间申请及初始化
 
-13. 设置硬件版本
+## 设置硬件版本
 
 ```cpp
     if (machine_class->hw_version) {
@@ -424,7 +429,9 @@ gpollfds = g_array_new(FALSE, FALSE, sizeof(GPollFD));
     }
 ```
 
-14. **cpudef\_init**初始化**支持的cpu feature**，可以通过如下命令查询当前qemu支持的cpu feature
+## 初始化支持的cpu feature
+
+**cpudef\_init**初始化**支持的cpu feature**，可以通过如下命令查询当前qemu支持的cpu feature
 
 ```cpp
 # /usr/bin/qemu-system-x86_64 -cpu help
@@ -435,9 +442,13 @@ gpollfds = g_array_new(FALSE, FALSE, sizeof(GPollFD));
     }
 ```
 
-14. data_dir_idx 遗留 怀疑是bios文件路径
+## data_dir_idx 
 
-15. 解析\-smp参数记录到全局变量中
+遗留 怀疑是bios文件路径
+
+## smp参数解析
+
+解析\-smp参数记录到全局变量中
 
 ```cpp
 smp_parse(qemu_opts_find(qemu_find_opts("smp-opts"), NULL));
@@ -453,7 +464,13 @@ if (smp_cpus > machine_class->max_cpus) {
 }
 ```
 
-16. 根据machine类型判断是否配置默认的串口，并口等设备。如果需要则创建默认的设备配置
+## 是否配置默认串口, 井口等
+
+根据machine类型判断是否配置默认的串口，并口等设备。如果需要则创建默认的设备配置
+
+```cpp
+
+```
 
 17. 初始化所有的char dev（pty\-\-serial/socket\-\-qga）
 
