--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -29,6 +29,11 @@
   - [data_dir_idx](#data_dir_idx)
   - [smp参数解析](#smp参数解析)
   - [是否配置默认串口, 井口等](#是否配置默认串口-井口等)
+  - [初始化所有char dev](#初始化所有char-dev)
+  - [打印device help日志](#打印device-help日志)
+  - [设置current_machine](#设置current_machine)
+  - [初始化虚拟化加速器](#初始化虚拟化加速器)
+  - [](#)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -369,7 +374,12 @@ bdrv_init_with_whitelist();
 
 ## 解析命令行参数
 
-接下来真正解析qemu command中配置的各种参数 通过一个for循环，**解析结果**放入`vm_config_group`
+接下来真正解析qemu command中配置的各种参数 通过一个for循环，**解析结果**放入`vm_config_groups`, 这个很关键
+
+```cpp
+// util/qemu-config.c
+static QemuOptsList *vm_config_groups[48];
+```
 
 ## 初始化main\_loop
 
@@ -469,17 +479,22 @@ if (smp_cpus > machine_class->max_cpus) {
 根据machine类型判断是否配置默认的串口，并口等设备。如果需要则创建默认的设备配置
 
 ```cpp
-
+if (machine_class->default_machine_opts){
+    qemu_opts_set_defaults(qemu_find_opts("machine"),
+                            machine_class->default_machine_opts, 0);
+}
 ```
 
-17. 初始化所有的char dev（pty\-\-serial/socket\-\-qga）
+## 初始化所有char dev
+
+初始化所有的char dev（pty\-\-serial/socket\-\-qga）
 
 ```cpp
     if (qemu_opts_foreach(qemu_find_opts("chardev"), chardev_init_func, NULL, 1) != 0)
         exit(1);
 ```
 
-18. 打印device help日志
+## 打印device help日志
 
 ```cpp
     if (qemu_opts_foreach(qemu_find_opts("device"), device_help_func, NULL, 0)
@@ -488,7 +503,9 @@ if (smp_cpus > machine_class->max_cpus) {
     }
 ```
 
-19. 从qemu command中获取设置的machine相关参数 并赋值给current_machine
+## 设置current_machine
+
+从qemu command中获取设置的machine相关参数, 并赋值给current\_machine
 
 ```cpp
     machine_opts = qemu_get_machine_opts();
@@ -499,13 +516,26 @@ if (smp_cpus > machine_class->max_cpus) {
     }
 ```
 
-20. 初始化虚拟化加速器configure_accelerator。这里的作用其实就是配置一些qemu与hypervisor层的交互接口。qemu通过一些句柄以ioctl的方式与kmod交互，完成虚拟化相关的操作。在qemu中维护的句柄包括:
+## 初始化虚拟化加速器
 
-* vmfd 虚拟机相关操作句柄，通过该句柄读写的都是与虚拟机相关的信息。
-* devkvmfd qemu与kmod交互的句柄，负责读取kmod中的公共信息。
-* vcpufd 虚拟CPU句柄，每个vcpu会分配一个句柄用于与kmod交互。
+```
+-machine pc-i440fx-rhel7.3.0,accel=kvm,usb=off,dump-guest-core=off
+```
+初始化虚拟化加速器configure_accelerator。
 
-在qemu中维护了一个结构体数组，用于记录各种虚拟化方案下的加速器初始化入口：
+```cpp
+configure_accelerator(current_machine);
+```
+
+这里的作用其实就是配置一些**qemu与hypervisor层**的**交互接口**。
+
+**qemu**通过一些**句柄**以**ioctl的方式**与**kmod**交互，完成虚拟化相关的操作。在qemu中维护的句柄包括:
+
+* vmfd: 虚拟机相关操作句柄，通过该句柄读写的都是与**虚拟机相关**的**信息**。
+* devkvmfd: qemu与kmod交互的句柄，负责读取**kmod中的公共信息**。
+* vcpufd: 虚拟CPU句柄，**每个vcpu**会分配一个句柄用于与kmod交互。
+
+在qemu中维护了一个**结构体数组**，用于记录**各种虚拟化方案**下的**加速器初始化入口**：
 
 ```cpp
 accel_list[] = {
@@ -516,7 +546,9 @@ accel_list[] = {
 };
 ```
 
-21. 从上面的映射关系中可以看到，我们当前的配置下使用kvm_init作为初始化入口。
+## 
+
+从上面的映射关系中可以看到，我们当前的配置下使用kvm_init作为初始化入口。
 
 * 为虚拟机初始化一个KVMState *s，用于保存vmfd，devkvmfd，中断路由等与kvm交互的信息
 * 版本协商 devkvmfd
