--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -33,7 +33,7 @@
   - [打印device help日志](#打印device-help日志)
   - [设置current_machine](#设置current_machine)
   - [初始化虚拟化加速器](#初始化虚拟化加速器)
-  - [](#)
+    - [kvm加速初始化](#kvm加速初始化)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -546,7 +546,7 @@ accel_list[] = {
 };
 ```
 
-## 
+### kvm加速初始化
 
 从上面的映射关系中可以看到，我们当前的配置下使用kvm_init作为初始化入口。
 
