--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -548,29 +548,34 @@ accel_list[] = {
 
 ### kvm加速初始化
 
-从上面的映射关系中可以看到，我们当前的配置下使用kvm_init作为初始化入口。
+```cpp
+// kvm-all.c
+static int kvm_init(MachineState *ms)
+```
+
+从上面的映射关系中可以看到，我们当前的配置下使用kvm_\init作为初始化入口。
 
 * 为虚拟机初始化一个KVMState *s，用于保存vmfd，devkvmfd，中断路由等与kvm交互的信息
-* 版本协商 devkvmfd
+* 版本协商: devkvmfd
 
 ```cpp
 ret = kvm_ioctl(s, KVM_GET_API_VERSION, 0);
 ```
 
-* 支持的最大内存插槽数量 devkvmfd
+* 支持的最大内存插槽数量 KVM\_CAP\_NR\_MEMSLOTS: devkvmfd
 
 ```cpp
 s->nr_slots = kvm_check_extension(s, KVM_CAP_NR_MEMSLOTS);
 ret = kvm_ioctl(s, KVM_CHECK_EXTENSION, extension);
 ```
 
-* 获取kvm建议的每个虚拟机支持的最大vcpu数量(soft) devkvmfd
+* 获取kvm建议的每个虚拟机支持的最大vcpu数量(soft): devkvmfd
 
 ```cpp
 int ret = kvm_check_extension(s, KVM_CAP_NR_VCPUS);
 ```
 
-* 获取每个虚拟机支持的最大vcpu数量(hard) devkvmfd
+* 获取每个虚拟机支持的最大vcpu数量(hard): devkvmfd
 
 ```cpp
 int ret = kvm_check_extension(s, KVM_CAP_MAX_VCPUS);
