--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -33,7 +33,7 @@
   - [打印device help日志](#打印device-help日志)
   - [设置current_machine](#设置current_machine)
   - [初始化虚拟化加速器](#初始化虚拟化加速器)
-    - [kvm加速初始化](#kvm加速初始化)
+    - [kvm加速初始化(创建虚拟机等ioctl)](#kvm加速初始化创建虚拟机等ioctl)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -546,7 +546,7 @@ accel_list[] = {
 };
 ```
 
-### kvm加速初始化
+### kvm加速初始化(创建虚拟机等ioctl)
 
 ```cpp
 // kvm-all.c
@@ -562,7 +562,7 @@ static int kvm_init(MachineState *ms)
 ret = kvm_ioctl(s, KVM_GET_API_VERSION, 0);
 ```
 
-* 支持的最大内存插槽数量 KVM\_CAP\_NR\_MEMSLOTS: devkvmfd
+* 支持的最大内存插槽数量: devkvmfd
 
 ```cpp
 s->nr_slots = kvm_check_extension(s, KVM_CAP_NR_MEMSLOTS);
@@ -582,13 +582,15 @@ int ret = kvm_check_extension(s, KVM_CAP_MAX_VCPUS);
 ```
 
 * 校验传入的vcpu参数smp/maxvcpus
-* 没用到kvm_type，貌似在powerpc里面会用到这个参数
-* 在kmod中初始化一个与虚拟机一一对应的kvm结构体，用于保存qemu与kvm交互的状态。返回qemu的vmfd
+* 没用到**kvm\_type**，貌似在powerpc里面会用到这个参数
+* 在**kmod**中初始化一个与虚拟机一一对应的**kvm结构体**，用于保存qemu与kvm交互的状态。返回**qemu的vmfd**
 
 ```cpp
 ret = kvm_ioctl(s, KVM_CREATE_VM, type);
+
 linux kernel
 static long kvm_dev_ioctl(struct file *filp, unsigned int ioctl, unsigned long arg)
+
 static int kvm_dev_ioctl_create_vm(unsigned long type)
 kvm = kvm_create_vm(type);
 ```
