--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -595,13 +595,13 @@ static int kvm_dev_ioctl_create_vm(unsigned long type)
 kvm = kvm_create_vm(type);
 ```
 
-* 检查qemu capability在kvm中是否支持
+* 检查**qemu capability**在kvm中是否支持
 
 ```cpp
 missing_cap = kvm_check_extension_list(s, kvm_required_capabilites);
 ```
 
-在kvm_arch_init中初始化硬件架构相关的一些特性，比如e820表，中断路由表等
+在kvm\_arch\_init中初始化硬件架构相关的一些特性，比如e820表，中断路由表等
 
 检查kvm是否支持MSR（model specific register，用于标识cpu的工作环境和工作状态），通常为一组寄存器，分别表示不同的标志位。其中一些要求必须存在，否则无法正常启动。
 
