--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -34,6 +34,10 @@
   - [设置current_machine](#设置current_machine)
   - [初始化虚拟化加速器](#初始化虚拟化加速器)
     - [kvm加速初始化(创建虚拟机等ioctl)](#kvm加速初始化创建虚拟机等ioctl)
+      - [初始化KVMState](#初始化kvmstate)
+      - [版本协商](#版本协商)
+      - [最大内存插槽数目](#最大内存插槽数目)
+      - [最大vcpu数](#最大vcpu数)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -555,19 +559,33 @@ static int kvm_init(MachineState *ms)
 
 从上面的映射关系中可以看到，我们当前的配置下使用kvm_\init作为初始化入口。
 
+#### 初始化KVMState
+
 * 为虚拟机初始化一个KVMState *s，用于保存vmfd，devkvmfd，中断路由等与kvm交互的信息
+
+#### 版本协商
+
 * 版本协商: devkvmfd
 
 ```cpp
 ret = kvm_ioctl(s, KVM_GET_API_VERSION, 0);
 ```
 
+#### 最大内存插槽数目
+
 * 支持的最大内存插槽数量: devkvmfd
 
 ```cpp
 s->nr_slots = kvm_check_extension(s, KVM_CAP_NR_MEMSLOTS);
+```
+
+调用了
+
+```cpp
 ret = kvm_ioctl(s, KVM_CHECK_EXTENSION, extension);
 ```
+
+#### 最大vcpu数
 
 * 获取kvm建议的每个虚拟机支持的最大vcpu数量(soft): devkvmfd
 
@@ -601,7 +619,7 @@ kvm = kvm_create_vm(type);
 missing_cap = kvm_check_extension_list(s, kvm_required_capabilites);
 ```
 
-在kvm\_arch\_init中初始化硬件架构相关的一些特性，比如e820表，中断路由表等
+* 在kvm\_arch\_init中初始化硬件架构相关的一些特性，比如e820表，中断路由表等
 
 检查kvm是否支持MSR（model specific register，用于标识cpu的工作环境和工作状态），通常为一组寄存器，分别表示不同的标志位。其中一些要求必须存在，否则无法正常启动。
 
