--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -37,7 +37,16 @@
       - [初始化KVMState](#初始化kvmstate)
       - [版本协商](#版本协商)
       - [最大内存插槽数目](#最大内存插槽数目)
-      - [最大vcpu数](#最大vcpu数)
+      - [最大vcpu数(soft)](#最大vcpu数soft)
+      - [最大vcpu数量(hard)](#最大vcpu数量hard)
+      - [初始化虚拟机kvm结构体](#初始化虚拟机kvm结构体)
+      - [检查kvm中的qemu capability](#检查kvm中的qemu-capability)
+      - [初始化硬件架构相关特性](#初始化硬件架构相关特性)
+      - [创建中断管理单元](#创建中断管理单元)
+  - [设置无硬盘启动相关参数](#设置无硬盘启动相关参数)
+  - [设置标准输出缓冲区](#设置标准输出缓冲区)
+  - [初始化vcpu相关的锁，信号量](#初始化vcpu相关的锁信号量)
+  - [初始化网络设备](#初始化网络设备)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -585,7 +594,7 @@ s->nr_slots = kvm_check_extension(s, KVM_CAP_NR_MEMSLOTS);
 ret = kvm_ioctl(s, KVM_CHECK_EXTENSION, extension);
 ```
 
-#### 最大vcpu数
+#### 最大vcpu数(soft)
 
 * 获取kvm建议的每个虚拟机支持的最大vcpu数量(soft): devkvmfd
 
@@ -593,11 +602,15 @@ ret = kvm_ioctl(s, KVM_CHECK_EXTENSION, extension);
 int ret = kvm_check_extension(s, KVM_CAP_NR_VCPUS);
 ```
 
+#### 最大vcpu数量(hard)
+
 * 获取每个虚拟机支持的最大vcpu数量(hard): devkvmfd
 
 ```cpp
 int ret = kvm_check_extension(s, KVM_CAP_MAX_VCPUS);
 ```
+
+#### 初始化虚拟机kvm结构体
 
 * 校验传入的vcpu参数smp/maxvcpus
 * 没用到**kvm\_type**，貌似在powerpc里面会用到这个参数
@@ -613,15 +626,19 @@ static int kvm_dev_ioctl_create_vm(unsigned long type)
 kvm = kvm_create_vm(type);
 ```
 
+#### 检查kvm中的qemu capability
+
 * 检查**qemu capability**在kvm中是否支持
 
 ```cpp
 missing_cap = kvm_check_extension_list(s, kvm_required_capabilites);
 ```
 
+#### 初始化硬件架构相关特性
+
 * 在kvm\_arch\_init中初始化硬件架构相关的一些特性，比如e820表，中断路由表等
 
-检查kvm是否支持MSR（model specific register，用于标识cpu的工作环境和工作状态），通常为一组寄存器，分别表示不同的标志位。其中一些要求必须存在，否则无法正常启动。
+检查**kvm是否支持MSR**（model specific register，用于标识cpu的工作环境和工作状态），通常为**一组寄存器**，分别表示不同的标志位。其中**一些**要求**必须存在**，否则无法正常启动。
 
 ```cpp
 ret = kvm_ioctl(s, KVM_GET_MSR_INDEX_LIST, &msr_list);
@@ -629,13 +646,19 @@ ret = kvm_ioctl(s, KVM_GET_MSR_INDEX_LIST, &msr_list);
 
 初始化e820 entry，以及e820 table。(e820表用于维护机器的物理内存布局)
 
-创建中断管理单元kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP);
+#### 创建中断管理单元
+
+创建中断管理单元
+
+```cpp
+kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP);
+```
 
 通过vmfd在kmod中创建一个虚拟pic
 
-初始化中断路由表(irqrouting 中断路由，与中断亲和性等相关。kvm通过该表可以知道将某一个中断路由到哪一个具体的vcpu上处理)
+初始化**中断路由表**(irqrouting 中断路由，与中断亲和性等相关。**kvm**通过该表可以知道将**某一个中断**路由到**哪一个具体的vcpu**上处理)
 
-22. 设置无硬盘启动相关参数
+## 设置无硬盘启动相关参数
 
 ```cpp
     machine_opts = qemu_get_machine_opts();
@@ -645,19 +668,23 @@ ret = kvm_ioctl(s, KVM_GET_MSR_INDEX_LIST, &msr_list);
     bios_name = qemu_opt_get(machine_opts, "firmware"); 
 ```
 
-23. 设置标准输出缓冲区
+## 设置标准输出缓冲区
 
 ```cpp
-os_set_line_buffering
+os_set_line_buffering();
 ```
 
-24. 初始化vcpu相关的锁，信号量
+## 初始化vcpu相关的锁，信号量
 
 ```cpp
-qemu_init_cpu_loop
+qemu_init_cpu_loop();
 ```
 
-25. 初始化网络设备。完成后端tap设备的初始化，与宿主机kernel交互，拉起vhost内核线程，完成vhost的初始化。正常情况下，虚拟机内部网卡收发数据会通过vring和内存共享。首先走一遍虚拟机内核的网络栈将数据包放入共享内存，通过vring通知后端网络设备拷贝共享内存，因为后端网络设备是在用户态的，因此又要重新走一次宿主机的内核网络协议栈。这种流程会导致网络IO性能较差，因此引入了vhost的概念。vhost是一个内核中的线程，会映射qemu中的共享内存页。当虚拟机内部发出网络包的时候，从后端共享内存直接映射到了host内核，跳过qemu处理环节，节省了处理时间，提升了性能。
+## 初始化网络设备
+
+完成后端tap设备的初始化，与宿主机kernel交互，拉起**vhost内核线程**，完成**vhost的初始化**。
+
+**正常**情况下，**虚拟机内部网卡收发数据**会通过**vring**和**内存共享**。首先走一遍**虚拟机内核**的**网络栈**将数据包放入**共享内存**，通过**vring**通知**后端网络设备**拷贝共享内存，因为**后端网络设备**是在**用户态**的，因此又要重新走一次**宿主机的内核网络协议栈**。这种流程会导致**网络IO性能较差**，因此引入了vhost的概念。vhost是一个**内核中的线程**，会映射**qemu**中的**共享内存页**。当虚拟机内部发出网络包的时候，从**后端共享内存**直接映射到了**host内核**，跳过qemu处理环节，节省了处理时间，提升了性能。
 
 ```cpp
 int net_init_clients(void)
