--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -682,12 +682,14 @@ qemu_init_cpu_loop();
 
 ## 初始化网络设备
 
-完成后端tap设备的初始化，与宿主机kernel交互，拉起**vhost内核线程**，完成**vhost的初始化**。
+完成**后端tap设备**的初始化，与宿主机kernel交互，拉起**vhost内核线程**，完成**vhost的初始化**。
 
-**正常**情况下，**虚拟机内部网卡收发数据**会通过**vring**和**内存共享**。首先走一遍**虚拟机内核**的**网络栈**将数据包放入**共享内存**，通过**vring**通知**后端网络设备**拷贝共享内存，因为**后端网络设备**是在**用户态**的，因此又要重新走一次**宿主机的内核网络协议栈**。这种流程会导致**网络IO性能较差**，因此引入了vhost的概念。vhost是一个**内核中的线程**，会映射**qemu**中的**共享内存页**。当虚拟机内部发出网络包的时候，从**后端共享内存**直接映射到了**host内核**，跳过qemu处理环节，节省了处理时间，提升了性能。
+**正常**情况下，**虚拟机内部网卡收发数据**会通过**vring**和**内存共享**。首先走一遍**虚拟机内核**的**网络栈**将数据包放入**共享内存**，通过**vring**通知**后端网络设备**拷贝共享内存，因为**后端网络设备**是在**用户态**的，因此又要重新走一次**宿主机的内核网络协议栈**。这种流程会导致**网络IO性能较差**，因此引入了vhost的概念。
+
+vhost是一个**内核中的线程**，会映射**qemu**中的**共享内存页**。当虚拟机内部发出网络包的时候，从**后端共享内存**直接映射到了**host内核**，跳过qemu处理环节，节省了处理时间，提升了性能。
 
 ```cpp
-int net_init_clients(void)
+int net_init_clients(void);
 net_init_netdev
 net_client_init1
 net_init_tap
