--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -47,6 +47,9 @@
   - [设置标准输出缓冲区](#设置标准输出缓冲区)
   - [初始化vcpu相关的锁，信号量](#初始化vcpu相关的锁信号量)
   - [初始化网络设备](#初始化网络设备)
+  - [磁盘设备初始化](#磁盘设备初始化)
+  - [创建qemu monitor](#创建qemu-monitor)
+  - [初始化主板](#初始化主板)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -701,7 +704,9 @@ net_init_tap_one
 
 On 32-bit hosts, QEMU is limited by virtual address space
 
-26. 磁盘设备初始化，与磁盘热插流程类似。把设备fd加入main_loop,注册read和write的回调函数
+## 磁盘设备初始化
+
+磁盘设备初始化，与磁盘热插流程类似。把设备fd加入main_loop,注册read和write的回调函数
 
 ```cpp
     if (qemu_opts_foreach(qemu_find_opts("drive"), drive_init_func,
@@ -715,7 +720,9 @@ On 32-bit hosts, QEMU is limited by virtual address space
 -device virtio-blk-pci,scsi=off,bus=pci.0,addr=0x7,drive=drive-virtio-disk25,id=virtio-disk25
 ```
 
-27. 创建qemu monitor，用于qemu与外部的通信，使用qmp协议。
+## 创建qemu monitor
+
+创建qemu monitor，用于qemu与外部的通信，使用**qmp协议**。
 
 ```cpp
     if (qemu_opts_foreach(qemu_find_opts("mon"), mon_init_func, NULL, 1) != 0) {
@@ -723,7 +730,9 @@ On 32-bit hosts, QEMU is limited by virtual address space
     }
 ```
 
-28. 初始化主板（VCPUbios北桥内存南桥，外围设备，中断等初始化）
+## 初始化主板
+
+初始化主板（VCPU bios 北桥 内存 南桥，外围设备，中断等初始化）
 
 ```cpp
     current_machine->ram_size = ram_size;
