--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -50,6 +50,8 @@
   - [磁盘设备初始化](#磁盘设备初始化)
   - [创建qemu monitor](#创建qemu-monitor)
   - [初始化主板](#初始化主板)
+  - [前端设备初始化](#前端设备初始化)
+  - [加载设备rom](#加载设备rom)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -753,13 +755,17 @@ On 32-bit hosts, QEMU is limited by virtual address space
         pc_cmos_init 初始化bios
 ```
 
-29. 前端设备初始化（qemu command中的-device参数）
+## 前端设备初始化
+
+前端设备初始化（qemu command中的-device参数）
 
 ```cpp
 qemu_opts_foreach(qemu_find_opts("device"), device_init_func, NULL, 1)
 ```
 
-30. 加载设备rom（/usr/share/qemu）
+## 加载设备rom
+
+加载设备rom（/usr/share/qemu）
 
 ```cpp
 int rom_load_all(void)
