--- Auto-Git Commit ---

--- a/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/1/2. 虚拟机创建流程 - qemu篇.md
@@ -765,13 +765,15 @@ qemu_opts_foreach(qemu_find_opts("device"), device_init_func, NULL, 1)
 
 ## 加载设备rom
 
-加载设备rom（/usr/share/qemu）
+加载设备rom（/**usr/share/qemu**）
 
 ```cpp
 int rom_load_all(void)
 ```
 
-31. 经过上面步骤的准备之后，一台虚拟机的所有虚拟硬件都已经准备完毕，这时候qemu会进入关键的流程main_loop中。main_loop是一个死循环，通过内核的epoll机制监听上面创建的所有fd，包括设备，vcpu等。虚拟机内部所有对设备的读写/对vcpu的操作都会触发句柄改变状态并被main_loop循环监听到，分发给注册好的回调函数处理这些事件。处理完成之后继续进入wait状态等待下一次触发。
+31. 
+
+经过上面步骤的准备之后，一台虚拟机的所有虚拟硬件都已经准备完毕，这时候qemu会进入关键的流程main_loop中。main_loop是一个死循环，通过内核的epoll机制监听上面创建的所有fd，包括设备，vcpu等。虚拟机内部所有对设备的读写/对vcpu的操作都会触发句柄改变状态并被main_loop循环监听到，分发给注册好的回调函数处理这些事件。处理完成之后继续进入wait状态等待下一次触发。
 
 以上就是qemu进程启动的主要流程，接下来启动虚拟机操作系统的流程为：
 
