--- Auto-Git Commit ---

--- a/Vim/多文件编辑: 窗口.md
+++ b/Vim/多文件编辑: 窗口.md
@@ -7,8 +7,8 @@
 - [启动Vim](#启动vim)
   - [使用小写的o参数来上下分屏](#使用小写的o参数来上下分屏)
   - [使用大写的O参数来左右分屏](#使用大写的o参数来左右分屏)
-- [1.2. 打开分屏](#12-打开分屏)
-    - [1.2.1. 上下分割当前打开的文件。](#121-上下分割当前打开的文件)
+- [打开分屏](#打开分屏)
+    - [上下分割当前打开的文件。](#上下分割当前打开的文件)
     - [1.2.2. 上下分割，并打开一个新的文件。](#122-上下分割并打开一个新的文件)
     - [1.2.3. 3.3 左右分割当前打开的文件。](#123-33-左右分割当前打开的文件)
     - [1.2.4. 3.4 左右分割，并打开一个新的文件。](#124-34-左右分割并打开一个新的文件)
@@ -69,9 +69,9 @@ vim -On file1 file2 ...
 
 注释: n是数字，表示分成几个屏。
 
-# 1.2. 打开分屏
+# 打开分屏
 
-### 1.2.1. 上下分割当前打开的文件。
+### 上下分割当前打开的文件。
 
 ```
 Ctrl+W s(split)
