--- a/Vim/多文件编辑: 窗口.md
+++ b/Vim/多文件编辑: 窗口.md
@@ -8,9 +8,9 @@
   - [使用小写的o参数来上下分屏](#使用小写的o参数来上下分屏)
   - [使用大写的O参数来左右分屏](#使用大写的o参数来左右分屏)
 - [打开分屏](#打开分屏)
-    - [上下分割当前打开的文件。](#上下分割当前打开的文件)
-    - [1.2.2. 上下分割，并打开一个新的文件。](#122-上下分割并打开一个新的文件)
-    - [1.2.3. 3.3 左右分割当前打开的文件。](#123-33-左右分割当前打开的文件)
+    - [上下分割当前打开的文件](#上下分割当前打开的文件)
+    - [上下分割，并打开一个新的文件](#上下分割并打开一个新的文件)
+    - [左右分割当前打开的文件。](#左右分割当前打开的文件)
     - [1.2.4. 3.4 左右分割，并打开一个新的文件。](#124-34-左右分割并打开一个新的文件)
     - [1.2.5. 3.5 创建空白分屏](#125-35-创建空白分屏)
   - [1.3. 关闭分屏](#13-关闭分屏)
@@ -71,19 +71,19 @@ vim -On file1 file2 ...
 
 # 打开分屏
 
-### 上下分割当前打开的文件。
+### 上下分割当前打开的文件
 
 ```
 Ctrl+W s(split)
 ```
 
-### 1.2.2. 上下分割，并打开一个新的文件。
+### 上下分割，并打开一个新的文件
 
 ```
 :sp filename
 ```
 
-### 1.2.3. 3.3 左右分割当前打开的文件。
+### 左右分割当前打开的文件。
 
 ```
 Ctrl+W v(vsplit)
