--- a/Vim/多文件编辑: 窗口.md
+++ b/Vim/多文件编辑: 窗口.md
@@ -5,24 +5,24 @@
 
 - [1. 介绍](#1-介绍)
 - [启动Vim](#启动vim)
+  - [创建空白分屏](#创建空白分屏)
   - [使用小写的o参数来上下分屏](#使用小写的o参数来上下分屏)
   - [使用大写的O参数来左右分屏](#使用大写的o参数来左右分屏)
 - [打开分屏](#打开分屏)
-    - [上下分割当前打开的文件](#上下分割当前打开的文件)
-    - [上下分割，并打开一个新的文件](#上下分割并打开一个新的文件)
-    - [左右分割当前打开的文件。](#左右分割当前打开的文件)
-    - [1.2.4. 3.4 左右分割，并打开一个新的文件。](#124-34-左右分割并打开一个新的文件)
-    - [1.2.5. 3.5 创建空白分屏](#125-35-创建空白分屏)
-  - [1.3. 关闭分屏](#13-关闭分屏)
-    - [1.3.1. 2.1 关闭当前窗口](#131-21-关闭当前窗口)
-    - [1.3.2. 2.2 关闭当前窗口，如果只剩最后一个了，则退出Vim。](#132-22-关闭当前窗口如果只剩最后一个了则退出vim)
-    - [1.3.3. 2.3 取消其它分屏，只保留当前分屏](#133-23-取消其它分屏只保留当前分屏)
-  - [1.4. 移动光标](#14-移动光标)
-    - [1.4.1. 4.1 把光标移到右边的屏。](#141-41-把光标移到右边的屏)
-    - [1.4.2. 4.2 把光标移到左边的屏中。](#142-42-把光标移到左边的屏中)
-    - [1.4.3. 4.3 把光标移到上边的屏中。](#143-43-把光标移到上边的屏中)
-    - [1.4.4. 4.4 把光标移到下边的屏中。](#144-44-把光标移到下边的屏中)
-    - [1.4.5. 4.5 把光标移到下一个的屏中。.](#145-45-把光标移到下一个的屏中)
+  - [上下分割当前打开的文件](#上下分割当前打开的文件)
+  - [上下分割，并打开一个新的文件](#上下分割并打开一个新的文件)
+  - [左右分割当前打开的文件](#左右分割当前打开的文件)
+  - [左右分割，并打开一个新的文件](#左右分割并打开一个新的文件)
+- [关闭分屏](#关闭分屏)
+  - [关闭当前窗口](#关闭当前窗口)
+  - [关闭当前窗口，如果只剩最后一个了，则退出Vim。](#关闭当前窗口如果只剩最后一个了则退出vim)
+  - [取消其它分屏，只保留当前分屏](#取消其它分屏只保留当前分屏)
+- [移动光标](#移动光标)
+  - [把光标移到右边的屏](#把光标移到右边的屏)
+  - [把光标移到左边的屏中。](#把光标移到左边的屏中)
+  - [把光标移到上边的屏中](#把光标移到上边的屏中)
+  - [把光标移到下边的屏中](#把光标移到下边的屏中)
+  - [把光标移到下一个的屏中](#把光标移到下一个的屏中)
   - [1.5. 移动分屏](#15-移动分屏)
     - [1.5.1. 5.1 向右移动。](#151-51-向右移动)
     - [1.5.2. 5.2向左移动](#152-52向左移动)
@@ -55,6 +55,12 @@ A buffer is the in-memory text of a file. A window is a viewport on a buffer. A 
 
 # 启动Vim
 
+## 创建空白分屏
+
+```
+:new
+```
+
 ## 使用小写的o参数来上下分屏
 
 ```
@@ -71,51 +77,74 @@ vim -On file1 file2 ...
 
 # 打开分屏
 
-### 上下分割当前打开的文件
+命令:
+
+```
+:sp[lit] {file}     水平分屏
+:new {file}         水平分屏
+:sv[iew] {file}     水平分屏，以只读方式打开
+:vs[plit] {file}    垂直分屏
+:clo[se]            关闭当前窗口
+```
+
+快捷键:
+
+```
+Ctrl+w s        水平分割当前窗口
+Ctrl+w v        垂直分割当前窗口
+Ctrl+w q        关闭当前窗口
+Ctrl+w n        打开一个新窗口（空文件）
+Ctrl+w o        关闭出当前窗口之外的所有窗口
+Ctrl+w T        当前窗口移动到新标签页
+```
+
+## 上下分割当前打开的文件
 
 ```
 Ctrl+W s(split)
+:sp
 ```
 
-### 上下分割，并打开一个新的文件
+## 上下分割，并打开一个新的文件
 
 ```
 :sp filename
+:new filename
 ```
 
-### 左右分割当前打开的文件。
+```
+:sv[iew] {file}     水平分屏，以只读方式打开
+```
+## 左右分割当前打开的文件
 
 ```
 Ctrl+W v(vsplit)
+:vsp
+:vs
 ```
 
-### 1.2.4. 3.4 左右分割，并打开一个新的文件。
+## 左右分割，并打开一个新的文件
 
 ```
 :vsp filename
+:vs filename
 ```
 
-### 1.2.5. 3.5 创建空白分屏
+# 关闭分屏
 
-```
-:new
-```
-
-## 1.3. 关闭分屏
-
-### 1.3.1. 2.1 关闭当前窗口
+## 关闭当前窗口
 
 ```
 Ctrl+W c(close)
 ```
 
-### 1.3.2. 2.2 关闭当前窗口，如果只剩最后一个了，则退出Vim。
+## 关闭当前窗口，如果只剩最后一个了，则退出Vim。
 
 ```
 Ctrl+W q(quit)
 ```
 
-### 1.3.3. 2.3 取消其它分屏，只保留当前分屏
+## 取消其它分屏，只保留当前分屏
 
 ```
 :only 
@@ -125,35 +154,45 @@ Ctrl+W q(quit)
 ctrl+w o
 ```
 
-## 1.4. 移动光标
+# 移动光标
 
 Vi中的光标键是h, j, k, l，要在各个屏间切换，只需要先按一下Ctrl+W
 
-### 1.4.1. 4.1 把光标移到右边的屏。
+```
+Ctrl+w h        切换到左边窗口
+Ctrl+w j        切换到下边窗口
+Ctrl+w k        切换到上边窗口
+Ctrl+w l        切换到右边窗口
+Ctrl+w w        遍历切换窗口
+Ctrl+w t        切换到最上方窗口
+Ctrl+w b        遍历切换窗口
+```
+
+## 把光标移到右边的屏
 
 ```
 Ctrl+W l
 ```
 
-### 1.4.2. 4.2 把光标移到左边的屏中。
+## 把光标移到左边的屏中。
 
 ```
 Ctrl+W h
 ```
 
-### 1.4.3. 4.3 把光标移到上边的屏中。
+## 把光标移到上边的屏中
 
 ```
 Ctrl+W k
 ```
 
-### 1.4.4. 4.4 把光标移到下边的屏中。
+## 把光标移到下边的屏中
 
 ```
 Ctrl+W j
 ```
 
-### 1.4.5. 4.5 把光标移到下一个的屏中。.
+## 把光标移到下一个的屏中
 
 ```
 Ctrl+W w
