--- a/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
@@ -568,6 +568,12 @@ accel_list[] = {
 
 ### 3.20.1. kvm加速初始化(创建虚拟机等ioctl)
 
+该初始化是在`kvm-all.c`文件中
+
+```cpp
+type_init(kvm_type_init);
+```
+
 ```cpp
 // kvm-all.c
 static int kvm_init(MachineState *ms)
@@ -578,6 +584,10 @@ static int kvm_init(MachineState *ms)
 #### 3.20.1.1. 初始化KVMState
 
 * 为虚拟机初始化一个KVMState *s，用于保存vmfd，devkvmfd，中断路由等与kvm交互的信息
+
+```cpp
+KVMState *s = KVM_STATE(ms->acelerator)
+```
 
 #### 3.20.1.2. 版本协商
 
