--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/1. 概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/1. 概述.md
@@ -9,7 +9,7 @@
 
 KVM全称是Kernel\-based Virtual Machine，是一个基于Linux环境的开源虚拟化解决方案。
 
-与 Xen、VMware 等提供完整解决方案的商业化虚拟产品不同，KVM的**思想**是在**Linux内核的基础**上添加**虚拟机管理模块**，重用Linux内核中已经完善的进程调度、内存管理、IO管理等部分，使之成为一个可以支持运行虚拟机的Hypervisor。因此，KVM并不是一个完整的模拟器，而只是一个提供了虚拟化功能的内核插件，具体的模拟器工作是借助QEMU来完成的，二者的架构区别如图5-1所示。
+与 Xen、VMware 等提供完整解决方案的商业化虚拟产品不同，KVM的**思想**是在**Linux内核的基础**上添加**虚拟机管理模块**，重用Linux内核中已经完善的**进程调度**、**内存管理**、**IO管理**等部分，使之成为一个可以支持运行虚拟机的Hypervisor。因此，KVM并不是一个完整的模拟器，而只是一个提供了虚拟化功能的内核插件，具体的模拟器工作是借助QEMU来完成的，二者的架构区别如图5-1所示。
 ￼
 图5-1 KVM和Xen虚拟化方案比较:
 
