--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1 KVM的内核模块结构](#1-kvm的内核模块结构)
+- [KVM的内核模块结构](#kvm的内核模块结构)
 - [2 Linux内核源码中的KVM](#2-linux内核源码中的kvm)
   - [2.1 virt/kvm目录](#21-virtkvm目录)
   - [2.2 arch/x86/kvm目录](#22-archx86kvm目录)
@@ -12,7 +12,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1 KVM的内核模块结构
+# KVM的内核模块结构
 
 KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。在KVM的 **Makefile** 文件中，可以查看到 **KVM 的代码文件组织结构**。
 
@@ -44,7 +44,9 @@ KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。
 
 在最后三行，可以看到该 Makefile 主要由**三个模块**生成：**kvm.ko**、**kvm\-intel.ko**和**kvm-amd.ko**，前者是KVM的核心模块，后两者是KVM的平台架构独立模块。
 
-在**KVM的核心模块**中，包含了**IOMMU**、**中断控制**、**kvm arch**、**设备管理**等部分的代码，这些代码形成了虚拟机管理的核心功能。从这些功能中可以看到，KVM 并没有尝试实现一个完整的 PC 系统虚拟化，而将最重要的 CPU 虚拟化、I/O 虚拟化和内存虚拟化部分针对硬件辅助的能力进行了有效的抽象和对接，并且暴露出API供上层应用使用。
+在**KVM的核心模块**中，包含了**IOMMU**、**中断控制**、**kvm arch**、**设备管理**等部分的代码，这些代码形成了虚拟机管理的核心功能。
+
+从这些功能中可以看到，KVM 并没有尝试实现一个完整的 PC 系统虚拟化，而将最重要的 CPU 虚拟化、I/O 虚拟化和内存虚拟化部分针对硬件辅助的能力进行了有效的抽象和对接，并且暴露出API供上层应用使用。
 
 **qemu\-kvm**是KVM所支持开发的一个QEMU版本，这个版本整合了KVM的加速支持，但是也**重用**了 **QEMU的体系结构**、**PC机平台模拟等功能**，充分发挥了二者的优点，相关内容将在后面介绍。
 
