--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/3. KVM所提供的API.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/3. KVM所提供的API.md
@@ -22,7 +22,7 @@ KVM的 API是通过/**dev/kvm设备**进行访问的。/dev/kvm是一个**字符
 
 ![](./images/2019-07-05-18-41-48.png)
 
-作为 Linux 的一个**标准字符型设备**，可以使用常见的**系统调用**如 **open**、**clos**e、**ioctl**等**指令**进行操作。因为KVM的字符型设备的实现函数中，**没有**包含**write**、**read**等操作。所有对KVM的操作都是通过**ioctl**发送相应的**控制字**实现的。
+作为 Linux 的一个**标准字符型设备**，可以使用常见的**系统调用**如 **open**、**close**、**ioctl**等**指令**进行操作。因为KVM的字符型设备的实现函数中，**没有**包含**write**、**read**等操作。所有对KVM的操作都是通过**ioctl**发送相应的**控制字**实现的。
 
 KVM所提供的**用户空间API**从功能上划分，可以分为**三种类型**，如表5\1所示。
 
