--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
@@ -3,18 +3,20 @@
 
 <!-- code_chunk_output -->
 
-- [KVM的内核模块结构](#kvm的内核模块结构)
-- [2 Linux内核源码中的KVM](#2-linux内核源码中的kvm)
-  - [2.1 virt/kvm目录](#21-virtkvm目录)
-  - [2.2 arch/x86/kvm目录](#22-archx86kvm目录)
-  - [2.3 include/linux目录](#23-includelinux目录)
-  - [2.4 include/asm\-x86目录](#24-includeasm-x86目录)
+- [1. KVM的内核模块结构](#1-kvm的内核模块结构)
+- [2. Linux内核源码中的KVM](#2-linux内核源码中的kvm)
+  - [2.1. virt/kvm目录](#21-virtkvm目录)
+  - [2.2. arch/x86/kvm目录](#22-archx86kvm目录)
+  - [2.3. include/linux目录](#23-includelinux目录)
+  - [2.4. include/asm-x86目录](#24-includeasm-x86目录)
 
 <!-- /code_chunk_output -->
 
-# KVM的内核模块结构
+# 1. KVM的内核模块结构
 
-KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。在KVM的 **Makefile** 文件中，可以查看到 **KVM 的代码文件组织结构**。
+KVM体现了**Linux系统的哲学**：**只做一件事情**，但是要**做得最好**。
+
+在KVM的 **Makefile** 文件中，可以查看到 **KVM 的代码文件组织结构**。
 
 先将 KVM 的Makefile文件列举如下。
 
@@ -46,15 +48,15 @@ KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。
 
 在**KVM的核心模块**中，包含了**IOMMU**、**中断控制**、**kvm arch**、**设备管理**等部分的代码，这些代码形成了虚拟机管理的核心功能。
 
-从这些功能中可以看到，KVM 并没有尝试实现一个完整的 PC 系统虚拟化，而将最重要的 CPU 虚拟化、I/O 虚拟化和内存虚拟化部分针对硬件辅助的能力进行了有效的抽象和对接，并且暴露出API供上层应用使用。
+从这些功能中可以看到，**KVM** 并没有尝试实现一个完整的 PC 系统虚拟化，而将最重要的 **CPU 虚拟化**、**I/O 虚拟化**和**内存虚拟化**部分针对**硬件辅助的能力**进行了有效的抽象和对接，并且暴露出API供上层应用使用。
 
 **qemu\-kvm**是KVM所支持开发的一个QEMU版本，这个版本整合了KVM的加速支持，但是也**重用**了 **QEMU的体系结构**、**PC机平台模拟等功能**，充分发挥了二者的优点，相关内容将在后面介绍。
 
-# 2 Linux内核源码中的KVM
+# 2. Linux内核源码中的KVM
 
 因为从 2.6.20 版本开始，KVM 已经被收入 Linux 内核代码。因此，获取KVM 源代码的最理想方式是从 Linux 内核代码中直接查找。以下列举出一些KVM源码所在的目录。
 
-## 2.1 virt/kvm目录
+## 2.1. virt/kvm目录
 
 **virt/kvm目录**如下：
 
@@ -67,7 +69,7 @@ KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。
 
 在 **kvm\_main.c** 中有一个 **kvm\_init** 的函数是**KVM初始化的入口**。
 
-## 2.2 arch/x86/kvm目录
+## 2.2. arch/x86/kvm目录
 
 **arch/x86/kvm**目录如下：
 
@@ -92,7 +94,7 @@ KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。
 
 该目录是 KVM 的**主要文件目录**，除了包含 **x86 架构** KVM 所需要的**头文件、代码**之外，还包括适用于**Intel的模块文件(vmx.c**)和**AMD芯片的模块文件(svm.c**)。
 
-## 2.3 include/linux目录
+## 2.3. include/linux目录
 
 **include/linux目录**如下：
 
@@ -103,7 +105,7 @@ KVM体现了Linux系统的哲学：只做一件事情，但是要做得最好。
 
 这几个目录主要包含了KVM的一些**参数定义信息**。
 
-## 2.4 include/asm\-x86目录
+## 2.4. include/asm-x86目录
 
 include/asm\-x86/目录如下：
 
