--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -4,8 +4,8 @@
 <!-- code_chunk_output -->
 
 - [KVM结构体](#kvm结构体)
-- [2 kvm\_vcpu结构体](#2-kvm_vcpu结构体)
-- [3 kvm\_x86\_ops结构体](#3-kvm_x86_ops结构体)
+- [kvm\_vcpu结构体](#kvm_vcpu结构体)
+- [kvm\_x86\_ops结构体](#kvm_x86_ops结构体)
 - [4 KVM API中重要的结构体](#4-kvm-api中重要的结构体)
   - [4.1 kvm\_chardev\_ops](#41-kvm_chardev_ops)
   - [4.2 kvm\_vm\_fops](#42-kvm_vm_fops)
@@ -109,25 +109,27 @@ KVM虚拟机中的**页表**、**MMU**等**运行时状态信息**。
 
 KVM 的软件 **arch** 方面所需要的一些参数，将在后文讨论 KVM 的实现机理时详细叙述。
 
-# 2 kvm\_vcpu结构体
+# kvm\_vcpu结构体
 
-在用户通过**KVM\_CREATE\_VCPU**系统调用请求创建vCPU之后，**KVM子模块**将创建kvm\_vcpu结构体并进行相应的初始化操作，然后返回**对应的vcpu\_fd描述符**。在KVM的内部虚拟机调度中，以**kvm\_vcpu**和KVM中的相关数据进行操作。kvm\_vcpu结构体中的字段较多，其中重要的成员如下。
+在用户通过**KVM\_CREATE\_VCPU**系统调用请求创建vCPU之后，**KVM子模块**将创建kvm\_vcpu结构体并进行相应的初始化操作，然后返回**对应的vcpu\_fd描述符**。
 
-- int vcpu\_id;
+在KVM的**内部虚拟机调度！！！** 中，以**kvm\_vcpu**和**KVM中的相关数据**进行操作。kvm\_vcpu结构体中的字段较多，其中重要的成员如下。
+
+* int vcpu\_id;
 
 对应的VCPU的ID。
 
-- struct **kvm\_run** \*run;
+* struct **kvm\_run** \*run;
 
 vCPU 的**运行时参数**，其中保存了**寄存器信息**、**内存信息**、**虚拟机状态**等各种**动态信息**。
 
-- struct **kvm\_vcpu\_arch** arch;
+* struct **kvm\_vcpu\_arch** arch;
 
 存储有 KVM **虚拟机**的**运行时参数**，如**定时器**、**中断**、**内存槽**等方面的信息。
 
 另外，kvm\_cpu中还包含了执行**iomem**所需要的数据结构，用于处理**iomem方面**的请求。
 
-# 3 kvm\_x86\_ops结构体
+# kvm\_x86\_ops结构体
 
 kvm\_x86\_ops结构体中包含了针对**具体的CPU架构**进行**虚拟化时**的函数指针调用，其定义在Linux内核文件的arch/x86/include/asm/kvm\_host.h中。
 
