--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -7,8 +7,8 @@
 - [kvm_vcpu结构体](#kvm_vcpu结构体)
 - [kvm_x86_ops结构体](#kvm_x86_ops结构体)
 - [KVM API中重要的结构体](#kvm-api中重要的结构体)
-  - [4.1 kvm\_chardev\_ops](#41-kvm_chardev_ops)
-  - [4.2 kvm\_vm\_fops](#42-kvm_vm_fops)
+  - [kvm\_chardev\_ops](#kvm_chardev_ops)
+  - [kvm\_vm\_fops](#kvm_vm_fops)
   - [4.3 kvm\_vcpu\_fops](#43-kvm_vcpu_fops)
 
 <!-- /code_chunk_output -->
@@ -175,11 +175,17 @@ amd架构的kvm\_x86\_ops结构体部分代码列举如下。
 
 在 **arch/x86/kvm/x86.c** 中，定义了名为 **kvm\_x86\_ops** 的**静态变量**，通过**export\_symbol 宏**在**全局范围**内导出。
 
+```cpp
+// arch/x86/kvm/x86.c
+struct kvm_x86_ops *kvm_x86_ops __read_mostly;
+EXPORT_SYMBOL_GPL(kvm_x86_ops);
+```
+
 在 **kvm\_init** 的**初始化过程**中，通过**调用kvm\_arch\_init**函数给**kvm\_x86\_ops**赋值，代码如下，其中，ops就是通过**svm.c**调用**kvm\_init**函数时传入的**kvm\_x86\_ops结构体**。
 
 代码5\-3 kvm\_x86\_ops赋值
 
-```
+```cpp
 // arch/x86/kvm/x86.c
 ￼(4652)        kvm_init_msr_list();￼
 (4653)￼
@@ -196,7 +202,7 @@ amd架构的kvm\_x86\_ops结构体部分代码列举如下。
 
 从后文的 **KVM的初始化**过程中可以得知，/**dev/kvm**是一个**字符型设备**，通过符合**Linux标准**的**一系列结构体**进行支撑，主要是**kvm\_chardev\_ops**、**kvm\_vm\_fops**、**kvm\_vcpu\_fops**，分别对应**字符型设备**、**VM文件描述符**和**vCPU文件描述符**的三种操作。
 
-## 4.1 kvm\_chardev\_ops
+## kvm\_chardev\_ops
 
 **kvm\_chardev\_ops**的定义在**virt/kvm/kvm\_main.c**中，代码如下：
 
@@ -213,7 +219,7 @@ amd架构的kvm\_x86\_ops结构体部分代码列举如下。
 
 kvm\_chardev\_ops为一个标准的**file\_operations结构体**，但是只包含了**ioctl函数**，**read**、**open**、**write**等常见的**系统调用**均采用**默认实现**。因此，就**只能**在**用户态**通过**ioctl函数**进行操作。
 
-## 4.2 kvm\_vm\_fops
+## kvm\_vm\_fops
 
 如前文所述，通过**KVM\_CREATE\_VM**之后可以获得一个**fd文件描述符**，代表**该VM**，该fd文件描述符在**KVM子模块**内部操作实际上对应着**kvm\_vm\_fops结构体**，其主要内容如下。
 
