--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -3,23 +3,23 @@
 
 <!-- code_chunk_output -->
 
-- [1 初始化流程](#1-初始化流程)
-- [2 虚拟机的创建](#2-虚拟机的创建)
-  - [2.1 虚拟机创建过程kvm\_dev\_ioctl\_create\_vm](#21-虚拟机创建过程kvm_dev_ioctl_create_vm)
-    - [2.1.1 kvm\_create\_vm流程](#211-kvm_create_vm流程)
-    - [2.1.2 返回kvm\_vm的fd文件描述符](#212-返回kvm_vm的fd文件描述符)
-- [3 vCPU的创建](#3-vcpu的创建)
-  - [3.1 vCPU的创建过程kvm\_vm\_ioctl\_create\_vcpu](#31-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
-    - [3.1.1 kvm\_arch\_vcpu\_create创建kvm\_vcpu](#311-kvm_arch_vcpu_create创建kvm_vcpu)
-    - [3.1.2 kvm\_arch\_vcpu\_setup初始化kvm\_vcpu](#312-kvm_arch_vcpu_setup初始化kvm_vcpu)
-    - [3.1.3 vCPU检测](#313-vcpu检测)
-    - [3.1.4 创建vcpu\_fd](#314-创建vcpu_fd)
-    - [3.1.5 释放内核锁和返回vcpu\_fd](#315-释放内核锁和返回vcpu_fd)
-- [4 vCPU的运行](#4-vcpu的运行)
+- [1. 初始化流程](#1-初始化流程)
+- [2. 虚拟机的创建](#2-虚拟机的创建)
+  - [2.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#21-虚拟机创建过程kvm_dev_ioctl_create_vm)
+    - [2.1.1. kvm_create_vm流程](#211-kvm_create_vm流程)
+    - [2.1.2. 返回kvm_vm的fd文件描述符](#212-返回kvm_vm的fd文件描述符)
+- [3. vCPU的创建](#3-vcpu的创建)
+  - [3.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#31-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
+    - [3.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#311-kvm_arch_vcpu_create创建kvm_vcpu)
+    - [3.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#312-kvm_arch_vcpu_setup初始化kvm_vcpu)
+    - [3.1.3. vCPU检测](#313-vcpu检测)
+    - [3.1.4. 创建vcpu_fd](#314-创建vcpu_fd)
+    - [3.1.5. 释放内核锁和返回vcpu_fd](#315-释放内核锁和返回vcpu_fd)
+- [4. vCPU的运行](#4-vcpu的运行)
 
 <!-- /code_chunk_output -->
 
-# 1 初始化流程
+# 1. 初始化流程
 
 KVM模块分为三个主要模块：kvm.ko、kvm\-intel.ko和kvm\-amd.ko，这三个模块在初始化阶段的流程如图5\-4所示。
 ￼
@@ -49,13 +49,13 @@ KVM的初始化步骤分为以下三步。
 
 3）进行后续的硬件初始化准备操作。
 
-# 2 虚拟机的创建
+# 2. 虚拟机的创建
 
 基于KVM的虚拟机创建分为**虚拟机创建**和**虚拟CPU创建**两个步骤。
 
 在下文的描述中，**虚拟机**对应的**文件描述符**为**vm\_fd**，**虚拟CPU**对应的**文件描述符**为**vcpu\_fd**。
 
-## 2.1 虚拟机创建过程kvm\_dev\_ioctl\_create\_vm
+## 2.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
 
 **打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 ioctl 指令写入KVM\_CREATE\_VM，即可创建一个 VM 虚拟。
 
@@ -107,7 +107,7 @@ static int kvm_dev_ioctl_create_vm(unsigned long type)
 
 kvm\_create\_vm的相关流程
 
-### 2.1.1 kvm\_create\_vm流程
+### 2.1.1. kvm_create_vm流程
 
 ```c
 // virt/kvm/kvm_main.c
@@ -177,7 +177,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 接下来，将初始化 KVM 的 **memslot 结构体**、**Bus 总线结构体信息**、**scru读/写锁信息**、**eventfd事件通知信息**、**mmu内存管理结构体**信息。
 
-### 2.1.2 返回kvm\_vm的fd文件描述符
+### 2.1.2. 返回kvm_vm的fd文件描述符
 
 然后，调用 **anon\_inode\_getfd** 函数。
 
@@ -196,7 +196,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 通过anon\_inode\_getfd获得的**fd文件描述符**，就是供**用户态**使用的**vm\_fd**，用户态将通过该fd进行进一步的虚拟机操作，首先要做的事情是**初始化vCPU**。
 
-# 3 vCPU的创建
+# 3. vCPU的创建
 
 创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
 
@@ -209,7 +209,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 - 初始化 kvm\_vcpu 的**状态信息**，设置 kvm\_vcpu 在被调度前需要配置的必要标志。
 - 初始化额外的信息，并且配置**apic等虚拟化组件**。
 
-## 3.1 vCPU的创建过程kvm\_vm\_ioctl\_create\_vcpu
+## 3.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
 
 接下来讲述KVM中**vCPU的创建过程**。
 
@@ -274,7 +274,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 (1418)   }
 ```
 
-### 3.1.1 kvm\_arch\_vcpu\_create创建kvm\_vcpu
+### 3.1.1. kvm_arch_vcpu_create创建kvm_vcpu
 
 首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的create\_vcpu方法执行。
 
@@ -288,32 +288,32 @@ static struct kvm *kvm_create_vm(unsigned long type)
 - 接着**初始化MSR！！！** 和**VMCS！！！等寄存器**，(**每个VCPU都有**)
 - 最后完成**I/O**和**内存部分寄存器的初始化**，为被**初次调度运行**做好准备。
 
-### 3.1.2 kvm\_arch\_vcpu\_setup初始化kvm\_vcpu
+### 3.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
 
 其次，在1377行调用**kvm\_arch\_vcpu\_setup**函数对**kvm\_vcpu**中的数据结构进行**初始化**。
 
 这里将先调用**kvm\_x86\_ops**中的**put\_vcpu函数**，实现将**vCPU的参数信息**加载入**CPU**中，并且执行**MMU初始化**和**CPU复位操作**。
 
-### 3.1.3 vCPU检测
+### 3.1.3. vCPU检测
 
 在 1381～1391 行中，进行了**两个检测**。
 
 - 第一个是检测到如果**当前的 vCPU数量**已经达到了**系统设置的上限** **KVM\_MAX\_VCPU**，则将销毁刚才创建的实例。
 - 第二个是如果**当前的vCPU**创建出来已经加入了**某一个已有的KVM主机**，则也将销毁该实例。
 
-### 3.1.4 创建vcpu\_fd
+### 3.1.4. 创建vcpu_fd
 
 然后，在 1396～1405 行，会创建**当前 vCPU** 对应的文件描述符 **vcpu\_fd**，并且将**kvm\_vcpu**添加入**KVM**的**vCPU数组**中。
 
 这里有一个特别之处，是使用了 atom\_read 和 atom\_inc 宏，这两个宏能够保证在进行 KVM 虚拟机的 vCPU添加时按照给定的顺序，不会因为执行中途的中断、进程切换等方式导致添加到不正确的kvm\_vcpu数组中。
 
-### 3.1.5 释放内核锁和返回vcpu\_fd
+### 3.1.5. 释放内核锁和返回vcpu_fd
 
 最后，释放掉所有的内核锁，完成本次vCPU的创建工作。
 
 返回**vcpu\_fd**
 
-# 4 vCPU的运行
+# 4. vCPU的运行
 
 在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
 
