--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 初始化流程](#1-初始化流程)
+- [1. KVM模块初始化流程](#1-kvm模块初始化流程)
 - [2. 虚拟机的创建](#2-虚拟机的创建)
   - [2.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#21-虚拟机创建过程kvm_dev_ioctl_create_vm)
     - [2.1.1. kvm_create_vm流程](#211-kvm_create_vm流程)
@@ -19,7 +19,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 初始化流程
+# 1. KVM模块初始化流程
 
 KVM模块分为三个主要模块：kvm.ko、kvm\-intel.ko和kvm\-amd.ko，这三个模块在初始化阶段的流程如图5\-4所示。
 ￼
@@ -41,11 +41,11 @@ KVM的初始化步骤分为以下三步。
 
 2）进入**kvm\_main.c**中的**kvm\_init**函数进行正式的初始化工作，期间进行了一系列子操作。(virt/kvm/kvm\_main.c)
 
-- 通过**kvm\_arch\_init**函数初始化KVM内部的一些数据结构：**注册全局变量kvm\_x86\_ops**、**初始化MMU**等数据结构、**初始化Timer定时器**架构。(arch/x86/kvm/x86.c)
-- 分配KVM内部操作所需要的**内存空间**。
-- 调用kvm\_x86\_ops的**hardware\_setup**函数进行具体的硬件体系结构的初始化工作。
-- 注册**sysfs**和**devfs**等API接口信息。
-- 最后初始化**debugfs**的调试信息。
+* 通过**kvm\_arch\_init**函数初始化KVM内部的一些数据结构：**注册全局变量kvm\_x86\_ops**、**初始化MMU**等数据结构、**初始化Timer定时器**架构。(arch/x86/kvm/x86.c)
+* 分配KVM内部操作所需要的**内存空间**。
+* 调用kvm\_x86\_ops的**hardware\_setup**函数进行具体的硬件体系结构的初始化工作。
+* 注册**sysfs**和**devfs**等API接口信息。
+* 最后初始化**debugfs**的调试信息。
 
 3）进行后续的硬件初始化准备操作。
 
