--- Auto-Git Commit ---

--- a/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
@@ -785,6 +785,8 @@ int rom_load_all(void)
 
 ## 3.30. main_loop
 
+主线程开启循环, 监听事件
+
 经过上面步骤的准备之后，一台虚拟机的所有虚拟硬件都已经准备完毕，这时候qemu会进入关键的流程main_loop中。
 
 main_loop是一个**死循环**，通过**内核**的**epoll机制**监听上面创建的**所有fd**，包括设备，vcpu等。**虚拟机内部**所有对**设备的读写**/对**vcpu的操作**都会触发**句柄改变状态**并被**main_loop循环监听到**，分发给注册好的回调函数处理这些事件。
