--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
@@ -3,13 +3,13 @@
 
 <!-- code_chunk_output -->
 
-* [1 曾经的qemu\-kvm](#1-曾经的qemu-kvm)
-* [2 下载QEMU源代码](#2-下载qemu源代码)
-* [3 配置和编译QEMU](#3-配置和编译qemu)
-	* [3.1 ./configure --help帮助](#31-configure-help帮助)
-	* [3.2 配置./configure \-\-target\-list=x86\_64\-softmmu](#32-配置configure-target-listx86_64-softmmu)
-	* [3.3 编译make](#33-编译make)
-* [4 安装QEMU: make install](#4-安装qemu-make-install)
+- [1. 曾经的qemu\-kvm](#1-曾经的qemu-kvm)
+- [2. 下载QEMU源代码](#2-下载qemu源代码)
+- [3. 配置和编译QEMU](#3-配置和编译qemu)
+  - [3.1. ./configure --help帮助](#31-configure-help帮助)
+  - [3.2. 配置./configure --target-list=x86_64-softmmu](#32-配置configure-target-listx86_64-softmmu)
+  - [3.3. 编译make](#33-编译make)
+- [4. 安装QEMU: make install](#4-安装qemu-make-install)
 
 <!-- /code_chunk_output -->
 
@@ -17,13 +17,13 @@
 
 在编译和安装了KVM并且启动到编译的内核之后，下面来看一下QEMU的编译和安装。
 
-# 1 曾经的qemu\-kvm
+# 1. 曾经的qemu\-kvm
 
 在上一版中，我们是以qemu\-kvm为例来讲解QEMU/KVM的。qemu-kvm原本是kernel社区维护的**专门用于KVM的QEMU的分支**。
 
 在**2012年**年末的时候，这个分支**并入了主流的QEMU**（ git://git.qemu-project.org/qemu.git ）。从此，不再需要特殊的qemu-kvm，而只是**通用的QEMU**加上\-\-**enable\-kvm**选项就可以创建KVM guest了。
 
-# 2 下载QEMU源代码
+# 2. 下载QEMU源代码
 
 在并入主流QEMU以后，目前的QEMU项目针对KVM/x86的部分依然是由Redhat公司的Paolo Bonzini作为维护者（Maintainer），代码的**git url**托管在 https://git.qemu.org/ 上。
 
@@ -47,11 +47,11 @@ https://www.qemu.org/download/
 [root@kvm-host ~]# git clone git://git.qemu.org/qemu.git￼
 ```
 
-# 3 配置和编译QEMU
+# 3. 配置和编译QEMU
 
 QEMU的配置并不复杂，通常情况下，**直接运行代码仓库中configure文件**进行配置即可。
 
-## 3.1 ./configure --help帮助
+## 3.1. ./configure --help帮助
 
 当然，如果对其配置不熟悉，可以运行“./configure \-\-help”命令查看配置的一些选项及其帮助信息。
 
@@ -85,9 +85,9 @@ Standard options:
 
 以上configure选项中我们特别提一下“\-\-**target\-list**”，它指定**QEMU对客户机架构**的支持。
 
-可以看到，对应的选项非常多，表面上QEMU对客户机的架构类型的支持是非常全面的。由于在本书中（也是多数的实际使用场景）我们只使用x86架构的客户机，因此指定“\-\-target\-list=x86\_64\-softmmu”，可以节省大量的编译时间。
+可以看到，对应的选项非常多，表面上QEMU对客户机的架构类型的支持是非常全面的。由于在本书中（也是多数的实际使用场景）我们**只使用x86架构**的客户机，因此指定`--target-list=x86_64-softmmu`，可以节省大量的编译时间。
 
-## 3.2 配置./configure \-\-target\-list=x86\_64\-softmmu
+## 3.2. 配置./configure --target-list=x86_64-softmmu
 
 执行configure文件进行**配置**的过程如下：
 
@@ -122,13 +122,13 @@ KVM support       yes      #这是对KVM的支持。默认￼
 
 - **config.status**是为用户贴心设计的，便于后续要**重新configure**时，只要执行“./**config.status**”就可以**恢复上一次configure的配置**。这对你苦心配置了很多选项，而后又忘了的情况非常有用。
 
-## 3.3 编译make
+## 3.3. 编译make
 
 经过配置之后，编译就很简单了，直接执行make即可。
 
 最后，编译生成**x86_64\-softmmu/qemu\-system\-x86\_64**文件，就是我们需要的**用户空间**用于其KVM客户机的工具了（在多数Linux发行版中自带的qemu\-kvm软件包的命令行是qemu\-kvm，只是名字不同的downstream，用户可以等同视之）。
 
-# 4 安装QEMU: make install
+# 4. 安装QEMU: make install
 
 编译完成之后，运行“**make install**”命令即可安装QEMU。
 
