--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -8,9 +8,13 @@
 # BIOS/UEFI 部分设计的指令
 
 是指硬件上电后CPU执行的最早期的指令。通常包括BIOS、boot loader等。
-这部分可以通过x86-bare-metal-examples来学习
+这部分可以通过[x86-bare-metal-examples](https://github.com/cirosantilli/x86-bare-metal-examples)来学习
 
+# IA32e指令
 
+是指操作系统已经经过一些初始化操作，例如开启页表、开启32bit或者32e模式、段寄存器初始化、开启中断（APIC/X2APIC)、开启SMP支持等。
+
+在这样的环境中，我们可以更专注于X86指令集的研究。上述初始化过程可以等日后展开讲述。
 
 # 参考
 
