--- a/Coroutine/协程.md
+++ b/Coroutine/协程.md
@@ -1,14 +1,31 @@
-# 协程
 
-子程序，或者称为函数，在所有语言中都是层级调用，比如A调用B，B在执行过程中又调用了C，C执行完毕返回，B执行完毕返回，最后是A执行完毕。
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-所以子程序调用是通过栈实现的，一个线程就是执行一个子程序。
+<!-- code_chunk_output -->
 
-子程序调用总是一个入口，一次返回，调用顺序是明确的。而协程的调用和子程序不同。
+- [子程序调用](#子程序调用)
+- [协程调用](#协程调用)
+- [gevent](#gevent)
+  - [小结](#小结)
+- [参考](#参考)
 
-协程看上去也是子程序，但执行过程中，在子程序内部可中断，然后转而执行别的子程序，在适当的时候再返回来接着执行。
+<!-- /code_chunk_output -->
 
-注意，在一个子程序中中断，去执行其他子程序，不是函数调用，有点类似CPU的中断。比如子程序A、B：
+# 子程序调用
+
+**子程序**，或者称为**函数**，在所有语言中都是**层级调用**，比如A调用B，B在执行过程中又调用了C，C执行完毕返回，B执行完毕返回，最后是A执行完毕。
+
+所以**子程序调用**是通过**栈实现！！！** 的，**一个线程！！！** 就是**执行一个子程序！！！**。
+
+**子程序调用**总是**一个入口**，**一次返回**，**调用顺序！！！** 是明确的。
+
+# 协程调用
+
+而**协程的调用**和子程序不同。
+
+协程看上去也是子程序，但执行过程中，在**子程序内部可中断**，然后**转而执行别的子程序**，在适当的时候再**返回来接着执行**。
+
+注意，在一个子程序中中断，去执行其他子程序，**不是函数调用！！！**，有点类似CPU的中断。比如子程序A、B：
 
 ```
 def A():
@@ -238,4 +255,5 @@ GET: https://github.com/
 # 参考
 
 http://xlambda.com/gevent-tutorial/
+
 http://blog.csdn.net/seizef/article/details/5732657
