--- a/Coroutine/协程.md
+++ b/Coroutine/协程.md
@@ -5,6 +5,7 @@
 
 - [子程序调用](#子程序调用)
 - [协程调用](#协程调用)
+  - [协程调用的优势](#协程调用的优势)
 - [gevent](#gevent)
   - [小结](#小结)
 - [参考](#参考)
@@ -25,7 +26,9 @@
 
 协程看上去也是子程序，但执行过程中，在**子程序内部可中断**，然后**转而执行别的子程序**，在适当的时候再**返回来接着执行**。
 
-注意，在一个子程序中中断，去执行其他子程序，**不是函数调用！！！**，有点类似CPU的中断。比如子程序A、B：
+注意，在一个子程序中中断，去执行其他子程序，**不是函数调用！！！**，有点类似**CPU的中断**。
+
+比如子程序A、B：
 
 ```
 def A():
@@ -39,7 +42,7 @@ def B():
     print 'z'
 ```
 
-假设由协程执行，在执行A的过程中，可以随时中断，去执行B，B也可能在执行过程中中断再去执行A，结果可能是：
+假设由**协程执行**，在执行A的过程中，可以**随时中断**，去执行B，B也可能在执行过程中中断再去执行A，结果可能是：
 
 ```
 1
@@ -50,15 +53,19 @@ y
 z
 ```
 
-但是在A中是没有调用B的，所以协程的调用比函数调用理解起来要难一些。
+但是在**A中是没有调用B！！！**的，所以协程的调用比函数调用理解起来要难一些。
 
-看起来A、B的执行有点像多线程，但协程的特点在于是一个线程执行，那和多线程比，协程有何优势？
+## 协程调用的优势
 
-最大的优势就是协程极高的执行效率。因为子程序切换不是线程切换，而是由程序自身控制，因此，没有线程切换的开销，和多线程比，线程数量越多，协程的性能优势就越明显。
+看起来A、B的执行有点**像多线程！！！**，但协程的特点在于是**一个线程执行！！！**，那和多线程比，协程有何优势？
 
-第二大优势就是不需要多线程的锁机制，因为只有一个线程，也不存在同时写变量冲突，在协程中控制共享资源不加锁，只需要判断状态就好了，所以执行效率比多线程高很多。
+最大的优势就是**协程极高的执行效率**。因为子程序切换**不是线程切换**，而是由**程序自身控制**，因此，**没有线程切换的开销**，和多线程比，**协程数量越多**，协程的性能优势就越明显。
 
-因为协程是一个线程执行，那怎么利用多核CPU呢？最简单的方法是多进程+协程，既充分利用多核，又充分发挥协程的高效率，可获得极高的性能。
+第二大优势就是**不需要多线程的锁机制！！！**，因为**只有一个线程**，也**不存在同时写变量冲突**，在协程中控制**共享资源不加锁**，只需要**判断状态**就好了，所以执行效率比多线程高很多。
+
+## 
+
+因为协程是一个线程执行，那**怎么利用多核CPU**呢？最简单的方法是**多进程+协程**，既充分利用多核，又充分发挥协程的高效率，可获得极高的性能。
 
 Python对协程的支持还非常有限，用在generator中的yield可以一定程度上实现协程。虽然支持不完全，但已经可以发挥相当大的威力了。
 
