--- a/Coroutine/协程.md
+++ b/Coroutine/协程.md
@@ -5,8 +5,10 @@
 
 - [子程序调用](#子程序调用)
 - [协程调用](#协程调用)
-  - [协程调用的优势](#协程调用的优势)
-- [gevent](#gevent)
+- [协程调用的优势](#协程调用的优势)
+- [对多核CPU的利用](#对多核cpu的利用)
+- [Python自身对协程的支持](#python自身对协程的支持)
+- [第三方gevent对协程的支持](#第三方gevent对协程的支持)
   - [小结](#小结)
 - [参考](#参考)
 
@@ -55,7 +57,7 @@ z
 
 但是在**A中是没有调用B！！！**的，所以协程的调用比函数调用理解起来要难一些。
 
-## 协程调用的优势
+# 协程调用的优势
 
 看起来A、B的执行有点**像多线程！！！**，但协程的特点在于是**一个线程执行！！！**，那和多线程比，协程有何优势？
 
@@ -63,17 +65,19 @@ z
 
 第二大优势就是**不需要多线程的锁机制！！！**，因为**只有一个线程**，也**不存在同时写变量冲突**，在协程中控制**共享资源不加锁**，只需要**判断状态**就好了，所以执行效率比多线程高很多。
 
-## 
+# 对多核CPU的利用
 
 因为协程是一个线程执行，那**怎么利用多核CPU**呢？最简单的方法是**多进程+协程**，既充分利用多核，又充分发挥协程的高效率，可获得极高的性能。
 
-Python对协程的支持还非常有限，用在generator中的yield可以一定程度上实现协程。虽然支持不完全，但已经可以发挥相当大的威力了。
+# Python自身对协程的支持
+
+Python对协程的支持还非常有限，用在**generator**中的**yield**可以一定程度上实现协程。虽然支持不完全，但已经可以发挥相当大的威力了。
 
 来看例子：
 
-传统的生产者-消费者模型是一个线程写消息，一个线程取消息，通过锁机制控制队列和等待，但一不小心就可能死锁。
+**传统的生产者-消费者模型**是**一个线程写消息**，**一个线程取消息**，通过**锁机制**控制队列和等待，但一不小心就可能死锁。
 
-如果改用协程，生产者生产消息后，直接通过yield跳转到消费者开始执行，待消费者执行完毕后，切换回生产者继续生产，效率极高：
+如果**改用协程**，**生产者生产消息后**，直接通过**yield**跳转到**消费者开始执行**，待消费者执行完毕后，切换回生产者继续生产，效率极高：
 
 ```
 import time
@@ -123,11 +127,11 @@ if __name__=='__main__':
 [PRODUCER] Consumer return: 200 OK
 ```
 
-注意到consumer函数是一个generator（生成器），把一个consumer传入produce后：
+注意到consumer函数是一个**generator（生成器**），把一个consumer传入produce后：
 
 首先调用c.next()启动生成器；
 
-然后，一旦生产了东西，通过c.send(n)切换到consumer执行；
+然后，**一旦生产了东西**，通过**c.send**(n)**切换到consumer执行**；
 
 consumer通过yield拿到消息，处理，又通过yield把结果传回；
 
@@ -135,19 +139,23 @@ produce拿到consumer处理的结果，继续生产下一条消息；
 
 produce决定不生产了，通过c.close()关闭consumer，整个过程结束。
 
-整个流程无锁，由一个线程执行，produce和consumer协作完成任务，所以称为“协程”，而非线程的抢占式多任务。
+**整个流程无锁**，由**一个线程执行**，produce和consumer协作完成任务，所以称为“协程”，而非线程的抢占式多任务。
 
 最后套用Donald Knuth的一句话总结协程的特点：
 
 “子程序就是协程的一种特例。”
 
-# gevent
+# 第三方gevent对协程的支持
 
-Python通过yield提供了对协程的基本支持，但是不完全。而第三方的gevent为Python提供了比较完善的协程支持。
+Python通过**yield**提供了对协程的基本支持，**但是不完全**。
 
-gevent是第三方库，通过greenlet实现协程，其基本思想是：
+而**第三方的gevent**为Python提供了比较完善的协程支持。
 
-当一个greenlet遇到IO操作时，比如访问网络，就自动切换到其他的greenlet，等到IO操作完成，再在适当的时候切换回来继续执行。由于IO操作非常耗时，经常使程序处于等待状态，有了gevent为我们自动切换协程，就保证总有greenlet在运行，而不是等待IO。
+gevent是第三方库，通过**greenlet实现协程**，其基本思想是：
+
+当**一个greenlet**遇到**IO操作**时，比如访问网络，就**自动切换**到**其他的greenlet**，等到IO操作完成，再在**适当的时候**切换回来继续执行。
+
+由于**IO操作非常耗时**，经常使**程序处于等待状态**，有了gevent为我们自动切换协程，就保证**总有greenlet在运行**，而**不是等待IO**。
 
 由于切换是在IO操作时自动完成，所以gevent需要修改Python自带的一些标准库，这一过程在启动时通过monkey patch完成：
 
